Add image example
