# _shared/swagger.json
@@ -42,6 +42,35 @@
 		"contact": {}
 	},
 	"paths": {
+		"/images": {
+			"get": {
+				"operationId": "RootGet",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string",
+									"format": "byte"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "url",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/": {
 			"get": {
 				"operationId": "RootGet",
